fix(MenuIconsGrid.css): Icons overflows on the apps grid

--- a/src/components/menuIconsGrid/MenuIconsGrid.css
+++ b/src/components/menuIconsGrid/MenuIconsGrid.css
@@ -13,3 +13,7 @@
 	align-items: center;
 	margin-bottom: 10px;
 }
+
+.IconAppContainer img {
+	height: initial;
+}
